@@ -85,6 +85,7 @@
 	"stats_conns": ["*internal"],
 	"resources_conns": ["*internal"],
 	"rals_conns": ["*internal"],
+	"rates_conns": ["*localhost"],
 },
 
 
