@@ -79,6 +79,7 @@
 	"stats_conns": ["*localhost"],
 	"resources_conns": ["*localhost"],
 	"rals_conns": ["*internal"],
+	"rates_conns": ["*localhost"],
 },
 
 
