@@ -732,30 +732,34 @@ func TestLoaderProcessRoutes(t *testing.T) {
 				Path:  "RouteRatingplanIDs",
 				Type:  utils.META_COMPOSED,
 				Value: config.NewRSRParsersMustCompile("~*req.9", utils.INFIELD_SEP)},
+			{Tag: "RouteRateProfileIDs",
+				Path:  "RouteRateProfileIDs",
+				Type:  utils.META_COMPOSED,
+				Value: config.NewRSRParsersMustCompile("~*req.10", utils.INFIELD_SEP)},
 			{Tag: "RouteResourceIDs",
 				Path:  "RouteResourceIDs",
 				Type:  utils.META_COMPOSED,
-				Value: config.NewRSRParsersMustCompile("~*req.10", utils.INFIELD_SEP)},
+				Value: config.NewRSRParsersMustCompile("~*req.11", utils.INFIELD_SEP)},
 			{Tag: "RouteStatIDs",
 				Path:  "RouteStatIDs",
 				Type:  utils.META_COMPOSED,
-				Value: config.NewRSRParsersMustCompile("~*req.11", utils.INFIELD_SEP)},
+				Value: config.NewRSRParsersMustCompile("~*req.12", utils.INFIELD_SEP)},
 			{Tag: "RouteWeight",
 				Path:  "RouteWeight",
 				Type:  utils.META_COMPOSED,
-				Value: config.NewRSRParsersMustCompile("~*req.12", utils.INFIELD_SEP)},
+				Value: config.NewRSRParsersMustCompile("~*req.13", utils.INFIELD_SEP)},
 			{Tag: "RouteBlocker",
 				Path:  "RouteBlocker",
 				Type:  utils.META_COMPOSED,
-				Value: config.NewRSRParsersMustCompile("~*req.13", utils.INFIELD_SEP)},
+				Value: config.NewRSRParsersMustCompile("~*req.14", utils.INFIELD_SEP)},
 			{Tag: "RouteParameters",
 				Path:  "RouteParameters",
 				Type:  utils.META_COMPOSED,
-				Value: config.NewRSRParsersMustCompile("~*req.14", utils.INFIELD_SEP)},
+				Value: config.NewRSRParsersMustCompile("~*req.15", utils.INFIELD_SEP)},
 			{Tag: "Weight",
 				Path:  "Weight",
 				Type:  utils.META_COMPOSED,
-				Value: config.NewRSRParsersMustCompile("~*req.15", utils.INFIELD_SEP)},
+				Value: config.NewRSRParsersMustCompile("~*req.16", utils.INFIELD_SEP)},
 		},
 	}
 	rdr := ioutil.NopCloser(strings.NewReader(engine.RoutesCSVContent))
@@ -799,6 +803,7 @@ func TestLoaderProcessRoutes(t *testing.T) {
 				FilterIDs:       []string{"FLTR_DST_DE"},
 				AccountIDs:      []string{"Account2"},
 				RatingPlanIDs:   []string{"RPL_3"},
+				RateProfileIDs:  []string{"RT_ALWAYS"},
 				ResourceIDs:     []string{"ResGroup3"},
 				StatIDs:         []string{"Stat2"},
 				Weight:          10,
